django-amp-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: djangoBlogAmpApp-v2-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: djangoBlogAmpApp-v2-app
  template:
    metadata:
      labels:
        app: djangoBlogAmpApp-v2-app
    spec:
      containers:
      - name: djangoBlogAmpApp-v2-app
        image: regiapriandi012/bismillah-final-deploykube:latest
        ports:
        - containerPort: 8000
