postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deploy
  labels:
    name: postgres-deploy
    app: django-blog-amp-app-v2-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: postgres-pod
      app: django-blog-amp-app-v2-app
  template:
    metadata:
      name: postgres-pod
      labels:
        name: postgres-pod
        app: django-blog-amp-app-v2-app
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
