django-amp-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: djangoBlogAmpApp-v2-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: djangoBlogAmpApp-v2-app
