postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    name: postgres-service
    app: django-blog-amp-app-v2-app
spec:
  type: LoadBalancer
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    name: postgres-pod
    app: django-blog-amp-app-v2-app
