webregi-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: webregi-v2-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: webregi-v2-app
