webregi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-blog-amp-app-v2-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: django-blog-amp-app-v2-app
