django-amp-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: djangoBlogAmpApp-ingress
spec:
  defaultBackend:
    service:
      name: djangoBlogAmpApp-v2-service
      port:
        number: 8000
