webregi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-blog-amp-app-ingress
spec:
  defaultBackend:
    service:
      name: django-blog-amp-app-v2-service
      port:
        number: 8000
